--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-	<meta charset='utf8'>
-	<meta name='viewport' content='width=device-width'>
-
-	<title>Frenco</title>
-
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/bundle.css'>
-
-	<script defer src='/bundle.js'></script>
-</head>
-
-<body>
-</body>
+  <head>
+    <meta charset="utf8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Frenco</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/bundle.css" />
+    <script defer src="/bundle.js"></script>
+  </head>
+  <body></body>
 </html>
