--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf8" />
+    <meta name="description" content="Frenco Jobs | dev"/>
     <meta name="viewport" content="width=device-width" />
     <title>Frenco</title>
     <link
