--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf8" />
-    <meta name="description" content="Frenco Jobs | dev"/>
+    <meta name="description" content="Frenco Jobs | dev" />
     <meta name="viewport" content="width=device-width" />
     <title>Frenco</title>
     <link
@@ -12,5 +12,40 @@
     <link rel="stylesheet" href="/bundle.css" />
     <script defer src="/bundle.js"></script>
   </head>
-  <body></body>
+  <body>
+    <main class="svelte-oightb">
+  <h1>Frenco Jobs</h1>
+  <article class="svelte-oightb">
+    I am currently attending classes at University of Information Technology,
+    Myanmar.
+    <br>
+    And I have a little bit of web development knowledge so I built this site.
+    <br>
+    I can type about 50 words per minute, and I like to listen LAUV songs on the
+    bus.
+    <br>
+    Elon Musk is my role model.
+    <br>
+    I like cats and I usually pretend to love big dogs even though I am so much
+    afraid of them.
+    <br>
+    I hate to use chat abbreviations like LOL, BTW, &amp; I don&#39;t like emojis
+    either.
+    <br>
+    BTW, I&#39;ve seen two TESLA in real life, and I ❤️ them a lot.
+  </article>
+  <footer class="svelte-oightb">
+    <a href="https://blog.frenco.codes" class="svelte-oightb">[My Blog]</a>
+    ·
+    <a href="https://github.com/frencojobs" class="svelte-oightb">[Github]</a>
+    ·
+    <a href="https://twitter.com/frencojobs" class="svelte-oightb">[Twitter]</a>
+    ·
+    <span class="svelte-oightb">[Broken]</span>
+  </footer>
+  <span title="for idiots: PS stands for Post Scriptum">
+    P.S. the last link is really broken
+  </span>
+</main>
+  </body>
 </html>
