client-side-rendering removed

--- a/public/template.html
+++ b/public/template.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/bundle.css" />
-    <script defer src="/bundle.js"></script>
+    <!-- <script defer src="/bundle.js"></script> -->
   </head>
   <body>
     <!-- app -->
