--- a/public/index.html
+++ b/public/index.html
@@ -29,12 +29,51 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap"
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/plus-jakarta-display.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Walter+Turncoat&display=swap"
       rel="stylesheet"
     />
+    <link href="/main.css" rel="stylesheet" />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div class="w-5/6 md:w-3/4 mx-auto py-10">
+      <div class="mt-12 w-full md:w-4/5">
+        <h2 class="font-sans font-black text-3xl md:text-4xl text-oc">
+          I am Frenco. I live in Myanmar. I do some opensource projects on
+          <a
+            href="https://github.com/frencojobs"
+            class="text-github bg-github bg-opacity-0 hover:bg-opacity-25 rounded pl-1"
+          >
+            GitHub
+          </a>
+          .
+          <br />I ocassionally write on my
+          <a
+            href="https://blog.frenco.codes"
+            class="text-blog bg-blog bg-opacity-0 hover:bg-opacity-25 rounded pl-1"
+          >
+            Blog
+          </a>
+          .
+          <br />
+          <img
+            src="/wave.png"
+            class="w-1/4 md:w-1/6 py-4"
+            alt="wavy separator"
+          />
+          Follow your dreams. And if possible, kindly follow me on
+          <a
+            href="https://twitter.com/frencojobs"
+            class="text-twitter bg-twitter bg-opacity-0 hover:bg-opacity-25 rounded px-1"
+          >
+            Twitter
+          </a>
+          as well.
+        </h2>
+      </div>
+    </div>
   </body>
 </html>
