--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,6 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/plus-jakarta-display.min.css"
-    />
-    <link
       href="https://fonts.googleapis.com/css2?family=Walter+Turncoat&display=swap"
       rel="stylesheet"
     />
@@ -41,7 +37,7 @@
   <body>
     <div class="w-5/6 md:w-3/4 mx-auto py-10">
       <div class="mt-12 w-full md:w-4/5">
-        <h2 class="font-sans font-black text-3xl md:text-4xl text-oc">
+        <h2 class="font-sans text-3xl md:text-4xl text-oc">
           I am Frenco. I live in Myanmar. I do some opensource projects on
           <a
             href="https://github.com/frencojobs"
