--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     />
     <meta property="twitter:image" content="https://frenco.codes/cover.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Walter+Turncoat&display=swap"
       rel="stylesheet"
