feat: change frenco.codes to frenco.dev

--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,21 @@
     />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://frenco.codes/" />
+    <meta property="og:url" content="https://frenco.dev/" />
     <meta property="og:title" content="Hello, I'm Frenco" />
     <meta
       property="og:description"
       content="Portfolio of Frenco Jobs, Student and Software Engineer"
     />
-    <meta property="og:image" content="https://frenco.codes/cover.png" />
+    <meta property="og:image" content="https://frenco.dev/cover.png" />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://frenco.codes/" />
+    <meta property="twitter:url" content="https://frenco.dev/" />
     <meta property="twitter:title" content="Hello, I'm Frenco" />
     <meta
       property="twitter:description"
       content="Portfolio of Frenco Jobs, Student and Software Engineer"
     />
-    <meta property="twitter:image" content="https://frenco.codes/cover.png" />
+    <meta property="twitter:image" content="https://frenco.dev/cover.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
@@ -48,7 +48,7 @@
           .
           <br />I ocassionally write on my
           <a
-            href="https://blog.frenco.codes"
+            href="https://blog.frenco.dev"
             class="text-blog bg-blog bg-opacity-0 hover:bg-opacity-25 rounded pl-1"
           >
             Blog
