--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Walter+Turncoat&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500;900&display=swap"
       rel="stylesheet"
     />
     <link href="/main.css" rel="stylesheet" />
@@ -37,8 +38,10 @@
   <body>
     <div class="w-5/6 md:w-3/4 mx-auto py-10">
       <div class="mt-12 w-full md:w-4/5">
+        <h2 class="font-sans text-3xl md:text-4xl text-oc font-bold">----</h2>
+        <br />
         <h2 class="font-sans text-3xl md:text-4xl text-oc">
-          I am Frenco. I live in Myanmar. I do some opensource projects on
+          Hey! I'm Frenco. I live in Myanmar. I do some opensource projects on
           <a
             href="https://github.com/frencojobs"
             class="text-github bg-github bg-opacity-0 hover:bg-opacity-25 rounded pl-1"
@@ -72,4 +75,18 @@
       </div>
     </div>
   </body>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-9BYMXMWRYT"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || []
+    function gtag() {
+      dataLayer.push(arguments)
+    }
+    gtag('js', new Date())
+
+    gtag('config', 'G-9BYMXMWRYT')
+  </script>
 </html>
