feat: add universal ga script

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-9BYMXMWRYT"
+      src="https://www.googletagmanager.com/gtag/js?id=UA-151014034-5"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || []
@@ -46,7 +46,7 @@
       }
       gtag('js', new Date())
 
-      gtag('config', 'G-9BYMXMWRYT')
+      gtag('config', 'UA-151014034-5')
     </script>
   </head>
   <body>
